fix: harden registration, CORS and public dev tooling
Registration
- username limited to letters, digits and underscore (no hyphen, so
  users cannot look like guest-/bot- system players); reserved names
  (admin, root, system, ...) refused; password capped at 72 (bcrypt
  truncates beyond that)
- username and email uniqueness is case-insensitive, both use one
  message so it cannot be probed, and a lost race maps to that message
- unique indexes on users.username/email are ensured at startup; a
  failure (existing duplicate data) is logged, not fatal
- the admin account is only created with an explicit 12+ char
  ADMIN_PASSWORD; the admin123 default is gone

CORS
- exact origins (Firebase hosting + local dev, override with
  APP_CORS_ALLOWED_ORIGINS) instead of a wildcard with credentials, for
  both the security chain and the GraphQL/WebSocket handshake

Abuse and exposure
- login/register/guestLogin rate limited per client IP, counted per
  resolved field so aliased batches do not bypass it
- GraphiQL, introspection and Swagger are off unless enabled (local
  profile enables them)
- GraphQL errors: validation failures return BAD_REQUEST naming the
  field; errors a resolver built itself (bad credentials, rate limit)
  are no longer masked as INTERNAL_ERROR

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>